hotfix: still fighting with li margin bugs - removed global li spacing, moved to Passage local styles

--- a/src/styles/base/type.css
+++ b/src/styles/base/type.css
@@ -112,10 +112,6 @@ p {
 	max-width: 60ch;
 }
 
-li + li {
-	margin-top: 1em;
-}
-
 a {
 	--underline-w: 0.125em;
 	--underline-offset: 0.08em;
